--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "db:push": "dotenv drizzle-kit push:mysql",
+    "db:push": "dotenv drizzle-kit push:pg",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "start": "next start",
@@ -12,8 +12,7 @@
     "email:magiclink": "cp -r ../react.email/emails/magic-link.tsx ./@/emails/"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.3.5",
-    "@planetscale/database": "^1.11.0",
+    "@auth/drizzle-adapter": "^0.3.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -27,11 +26,12 @@
     "@trpc/server": "^10.37.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "drizzle-orm": "^0.28.5",
+    "drizzle-orm": "^0.28.6",
     "geist": "^1.1.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
     "next-intl": "^3.1.2",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resend": "^2.0.0",
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
@@ -53,7 +54,6 @@
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.47.0",
     "eslint-config-next": "^14.0.0",
-    "mysql2": "^3.6.1",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
