--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "email:magiclink": "cp -r ../react.email/emails/magic-link.tsx ./@/emails/"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@auth/drizzle-adapter": "^0.3.7",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -28,12 +31,14 @@
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
     "geist": "^1.1.0",
+    "lucide-react": "^0.293.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
     "next-intl": "^3.1.2",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "resend": "^2.0.0",
     "sonner": "^1.2.2",
     "superjson": "^1.13.1",
