update env database to postgres

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 # should be updated accordingly.
 
 # Local docker
-DATABASE_HOST=localhost
-DATABASE_DB=t3stack
-DATABASE_PORT=5432
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
-DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_DB}?schema=public&connect_timeout=300"
+POSTGRES_HOST=localhost
+POSTGRES_DB=t3stack
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public&connect_timeout=300"
 
 # Drizzle
 # Get the Database URL from the "prisma" dropdown selector in PlanetScale. 
