--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     container_name: t3stack_postgres
     image: postgres:latest
     environment:
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DATABASE_DB} #optional (specify default database instead of $POSTGRES_USER)
+      - DATABASE_USER=${POSTGRES_USER}
+      - DATABASE_PASSWORD=${POSTGRES_PASSWORD}
+      - DATABASE_DATABASE=${POSTGRES_DB} #optional (specify default database instead of $DATABASE_USER)
     ports:
-      - "${DATABASE_PORT}:${DATABASE_PORT}"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
