--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
+name: t3stack
 services:
   postgres_dev:
     container_name: t3stack_postgres
     image: postgres:latest
     environment:
-      - DATABASE_USER=${POSTGRES_USER}
-      - DATABASE_PASSWORD=${POSTGRES_PASSWORD}
-      - DATABASE_DATABASE=${POSTGRES_DB} #optional (specify default database instead of $DATABASE_USER)
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DATABASE}
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
-
   pgadmin:
     container_name: t3stack_pgadmin
     image: dpage/pgadmin4:latest
@@ -23,7 +23,6 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: unless-stopped
-
 volumes:
   postgres-data:
   pgadmin-data:
