--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "email:magiclink": "cp -r ../react.email/emails/magic-link.tsx ./@/emails/"
+    "email:magiclink": "cp -r ../web.frontapp.email/emails/magic-link.tsx ./src/emails/"
   },
   "dependencies": {
+    "@auth/core": "^0.18.4",
     "@auth/drizzle-adapter": "^0.3.9",
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -25,6 +26,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "^0.0.11",
+    "@react-email/render": "^0.0.9",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -36,9 +38,10 @@
     "drizzle-orm": "^0.28.6",
     "geist": "^1.1.0",
     "lucide-react": "^0.293.0",
-    "next": "^14.0.0",
+    "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "next-intl": "^3.1.2",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -53,6 +56,7 @@
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
