--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "db:migration": "dotenv drizzle-kit generate:pg",
     "db:introspect": "dotenv drizzle-kit introspect:pg",
+    "db:seed": "bun ./src/server/db/seed.ts",
     "db:push": "dotenv drizzle-kit push:pg",
     "db:studio": "dotenv drizzle-kit studio",
     "db:drop": "dotenv drizzle-kit drop",
@@ -54,6 +55,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/nodemailer": "^6.4.14",
@@ -71,6 +73,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
