--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "next-intl": "^3.1.2",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "react": "18.2.0",
