--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:push": "dotenv drizzle-kit push:pg",
     "db:studio": "dotenv drizzle-kit studio",
     "db:drop": "dotenv drizzle-kit drop",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
     "email:magiclink": "cp -r ../web.frontapp.email/emails/magic-link.tsx ./src/emails/"
@@ -27,6 +27,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "^0.0.11",
     "@react-email/render": "^0.0.9",
     "@t3-oss/env-nextjs": "^0.7.0",
