new components pre approved step WIP

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "db:migration": "dotenv drizzle-kit generate:pg",
-    "db:introspect": "dotenv drizzle-kit introspect:pg",
-    "db:seed": "bun ./src/server/db/seed.ts",
-    "db:push": "dotenv drizzle-kit push:pg",
-    "db:studio": "dotenv drizzle-kit studio",
-    "db:drop": "dotenv drizzle-kit drop",
+    "drizzle:generate": "drizzle-kit generate:pg --out ./drizzle/migrations --breakpoints --schema=./src/server/db/schema.ts",
+    "drizzle:generate:orgs": "drizzle-kit generate:pg --out ./drizzle/migrations-orgs --breakpoints --schema=././src/server/db/org-schema.ts",
+    "drizzle:introspect": "dotenv drizzle-kit introspect:pg",
+    "drizzle:seed": "bun ./src/server/db/seed.ts",
+    "drizzle:push": "dotenv drizzle-kit push:pg",
+    "drizzle:studio": "dotenv drizzle-kit studio",
+    "drizzle:drop": "dotenv drizzle-kit drop",
     "dev": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
